5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4469/executions/1712_2499.log
== SUBMITION (2019-05-08 15:18:25) 
-- CODE:
k = int(input())

c = 0
e = 0

while(c < k):
	e = e + (1 / (math.factorial(c)))
	c = c + 1
	
print(round(e, 8))
-- EXECUTION TIME:
0.031132
-- ERROR:
Error response from daemon: Container e1124b82d84f161cb1438fe1c171a43ae8d7eb0634f077642380d0061fb5f4a8 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:18:41) 
-- CODE:
k = int(input())

c = 0
e = 0

while(c < k):
	e = e + (1 / (math.factorial(c)))
	c = c + 1
	
print(round(e, 8))
-- EXECUTION TIME:
0.0304441
-- ERROR:
Error response from daemon: Container e1124b82d84f161cb1438fe1c171a43ae8d7eb0634f077642380d0061fb5f4a8 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:18:42) 
-- CODE:
k = int(input())

c = 0
e = 0

while(c < k):
	e = e + (1 / (math.factorial(c)))
	c = c + 1
	
print(round(e, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    e = e + (1 / (math.factorial(c)))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:18:45) 
-- CODE:
k = int(input())

c = 0
e = 0

while(c < k):
	e = e + (1 / (math.factorial(c)))
	c = c + 1
	
print(round(e, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    e = e + (1 / (math.factorial(c)))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:18:47) 
-- CODE:
k = int(input())

c = 0
e = 0

while(c < k):
	e = e + (1 / (math.factorial(c)))
	c = c + 1
	
print(round(e, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    e = e + (1 / (math.factorial(c)))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:18:47) 
-- CODE:
k = int(input())

c = 0
e = 0

while(c < k):
	e = e + (1 / (math.factorial(c)))
	c = c + 1
	
print(round(e, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    e = e + (1 / (math.factorial(c)))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:18:47) 
-- CODE:
k = int(input())

c = 0
e = 0

while(c < k):
	e = e + (1 / (math.factorial(c)))
	c = c + 1
	
print(round(e, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    e = e + (1 / (math.factorial(c)))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:18:47) 
-- CODE:
k = int(input())

c = 0
e = 0

while(c < k):
	e = e + (1 / (math.factorial(c)))
	c = c + 1
	
print(round(e, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    e = e + (1 / (math.factorial(c)))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:18:47) 
-- CODE:
k = int(input())

c = 0
e = 0

while(c < k):
	e = e + (1 / (math.factorial(c)))
	c = c + 1
	
print(round(e, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    e = e + (1 / (math.factorial(c)))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:18:48) 
-- CODE:
k = int(input())

c = 0
e = 0

while(c < k):
	e = e + (1 / (math.factorial(c)))
	c = c + 1
	
print(round(e, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    e = e + (1 / (math.factorial(c)))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:18:48) 
-- CODE:
k = int(input())

c = 0
e = 0

while(c < k):
	e = e + (1 / (math.factorial(c)))
	c = c + 1
	
print(round(e, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    e = e + (1 / (math.factorial(c)))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:18:48) 
-- CODE:
k = int(input())

c = 0
e = 0

while(c < k):
	e = e + (1 / (math.factorial(c)))
	c = c + 1
	
print(round(e, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    e = e + (1 / (math.factorial(c)))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:18:48) 
-- CODE:
k = int(input())

c = 0
e = 0

while(c < k):
	e = e + (1 / (math.factorial(c)))
	c = c + 1
	
print(round(e, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    e = e + (1 / (math.factorial(c)))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:18:48) 
-- CODE:
k = int(input())

c = 0
e = 0

while(c < k):
	e = e + (1 / (math.factorial(c)))
	c = c + 1
	
print(round(e, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    e = e + (1 / (math.factorial(c)))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:18:59) 
-- CODE:
k = int(input())

c = 0
e = 0

while(c < k):
	e = e + (1 / (math.factorial(c)))
	c = c + 1
	
print(round(e, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    e = e + (1 / (math.factorial(c)))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:18:59) 
-- CODE:
k = int(input())

c = 0
e = 0

while(c < k):
	e = e + (1 / (math.factorial(c)))
	c = c + 1
	
print(round(e, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    e = e + (1 / (math.factorial(c)))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:19:00) 
-- CODE:
k = int(input())

c = 0
e = 0

while(c < k):
	e = e + (1 / (math.factorial(c)))
	c = c + 1
	
print(round(e, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    e = e + (1 / (math.factorial(c)))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:19:00) 
-- CODE:
k = int(input())

c = 0
e = 0

while(c < k):
	e = e + (1 / (math.factorial(c)))
	c = c + 1
	
print(round(e, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    e = e + (1 / (math.factorial(c)))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:19:00) 
-- CODE:
k = int(input())

c = 0
e = 0

while(c < k):
	e = e + (1 / (math.factorial(c)))
	c = c + 1
	
print(round(e, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    e = e + (1 / (math.factorial(c)))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:19:01) 
-- CODE:
k = int(input())

c = 0
e = 0

while(c < k):
	e = e + (1 / (math.factorial(c)))
	c = c + 1
	
print(round(e, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    e = e + (1 / (math.factorial(c)))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:19:01) 
-- CODE:
k = int(input())

c = 0
e = 0

while(c < k):
	e = e + (1 / (math.factorial(c)))
	c = c + 1
	
print(round(e, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    e = e + (1 / (math.factorial(c)))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:19:01) 
-- CODE:
k = int(input())

c = 0
e = 0

while(c < k):
	e = e + (1 / (math.factorial(c)))
	c = c + 1
	
print(round(e, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    e = e + (1 / (math.factorial(c)))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:19:01) 
-- CODE:
k = int(input())

c = 0
e = 0

while(c < k):
	e = e + (1 / (math.factorial(c)))
	c = c + 1
	
print(round(e, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    e = e + (1 / (math.factorial(c)))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:19:01) 
-- CODE:
k = int(input())

c = 0
e = 0

while(c < k):
	e = e + (1 / (math.factorial(c)))
	c = c + 1
	
print(round(e, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    e = e + (1 / (math.factorial(c)))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:19:02) 
-- CODE:
k = int(input())

c = 0
e = 0

while(c < k):
	e = e + (1 / (math.factorial(c)))
	c = c + 1
	
print(round(e, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    e = e + (1 / (math.factorial(c)))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:19:02) 
-- CODE:
k = int(input())

c = 0
e = 0

while(c < k):
	e = e + (1 / (math.factorial(c)))
	c = c + 1
	
print(round(e, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    e = e + (1 / (math.factorial(c)))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:19:03) 
-- CODE:
k = int(input())

c = 0
e = 0

while(c < k):
	e = e + (1 / (math.factorial(c)))
	c = c + 1
	
print(round(e, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    e = e + (1 / (math.factorial(c)))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:19:03) 
-- CODE:
k = int(input())

c = 0
e = 0

while(c < k):
	e = e + (1 / (math.factorial(c)))
	c = c + 1
	
print(round(e, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    e = e + (1 / (math.factorial(c)))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:19:04) 
-- CODE:
k = int(input())

c = 0
e = 0

while(c < k):
	e = e + (1 / (math.factorial(c)))
	c = c + 1
	
print(round(e, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    e = e + (1 / (math.factorial(c)))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:19:04) 
-- CODE:
k = int(input())

c = 0
e = 0

while(c < k):
	e = e + (1 / (math.factorial(c)))
	c = c + 1
	
print(round(e, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    e = e + (1 / (math.factorial(c)))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:19:04) 
-- CODE:
k = int(input())

c = 0
e = 0

while(c < k):
	e = e + (1 / (math.factorial(c)))
	c = c + 1
	
print(round(e, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    e = e + (1 / (math.factorial(c)))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:19:04) 
-- CODE:
k = int(input())

c = 0
e = 0

while(c < k):
	e = e + (1 / (math.factorial(c)))
	c = c + 1
	
print(round(e, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    e = e + (1 / (math.factorial(c)))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:19:04) 
-- CODE:
k = int(input())

c = 0
e = 0

while(c < k):
	e = e + (1 / (math.factorial(c)))
	c = c + 1
	
print(round(e, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    e = e + (1 / (math.factorial(c)))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:19:05) 
-- CODE:
k = int(input())

c = 0
e = 0

while(c < k):
	e = e + (1 / (math.factorial(c)))
	c = c + 1
	
print(round(e, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    e = e + (1 / (math.factorial(c)))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:19:05) 
-- CODE:
k = int(input())

c = 0
e = 0

while(c < k):
	e = e + (1 / (math.factorial(c)))
	c = c + 1
	
print(round(e, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    e = e + (1 / (math.factorial(c)))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:19:05) 
-- CODE:
k = int(input())

c = 0
e = 0

while(c < k):
	e = e + (1 / (math.factorial(c)))
	c = c + 1
	
print(round(e, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    e = e + (1 / (math.factorial(c)))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:19:05) 
-- CODE:
k = int(input())

c = 0
e = 0

while(c < k):
	e = e + (1 / (math.factorial(c)))
	c = c + 1
	
print(round(e, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    e = e + (1 / (math.factorial(c)))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:19:05) 
-- CODE:
k = int(input())

c = 0
e = 0

while(c < k):
	e = e + (1 / (math.factorial(c)))
	c = c + 1
	
print(round(e, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    e = e + (1 / (math.factorial(c)))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:21:08) 
-- CODE:
k = int(input())

c = 0
e = 0

while(c < k):
	e = e + (1 / (math.factorial(c)))
	c = c + 1
	
print(round(e, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    e = e + (1 / (math.factorial(c)))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:22:30) 
-- CODE:
from math import*

k = int(input())

c = 0
e = 0

while(c < k):
	e = e + (1 / factorial(c))
	c = c + 1
	
print(round(e, 8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:22:41) 
-- CODE:
from math import*

k = int(input())

c = 0
e = 0

while(c < k):
	e = e + (1 / factorial(c))
	c = c + 1
	
print(round(e, 8))
-- EXECUTION TIME:
0.15798
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
